--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,99 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3>Hello World!</h3>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <style>
+  .modal-header, h4, .close {
+    background-color: #f49b13;
+    color:white !important;
+    text-align: center;
+    font-size: 30px;
+  }
+  .modal-footer {
+    background-color: #f9f9f9;
+  }
+  </style>
+</head>
+
+    <h3> Bok {{ session["username"] }}! </h3>
     <hr/>
 
+    <div class="container">
+      <!-- Trigger the modal with a button -->
+
+        {% if g.user is none %}
+        <button type="button" class="btn btn-default btn-lg" id="login_button">Login</button>
+        <button type="button" class="btn btn-default btn-lg" id="register_button" onclick="window.location.href = '/auth/register'">Register</button>
+        {% endif %}
+
+      <!-- Modal -->
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header" style="padding:25px 25px;">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4><span class="glyphicon glyphicon-lock"></span> Login</h4>
+            </div>
+            <div class="modal-body" style="padding:40px 50px;">
+              <form role="form" method="post">
+                <div class="form-group">
+                  <label for="username"><span class="glyphicon glyphicon-user"></span> Username</label>
+                  <input type="text" class="form-control" name="username" id="username" placeholder="Enter username" required>
+                </div>
+                <div class="form-group">
+                  <label for="password"><span class="glyphicon glyphicon-eye-open"></span> Password</label>
+                  <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
+                </div>
+                <div class="checkbox">
+                  <label><input type="checkbox" value="" checked>Remember me</label>
+                </div>
+                  <button type="submit" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-off"></span> Submit</button>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <p>Not a member? <a href="window.location.href = 'auth/register'">Sign Up</a></p>
+              <p>Forgot <a href="#">Password?</a></p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    {% if g.user is not none %}
+    <h4>Aktivnost prošlog mjeseca</h4>
+    <hr/>
 
     <table class="table table-striped table-bordered table-hover">
         <thead>
         <tr>
-            <th>Title</th>
-            <th>Description</th>
-            <th>Created Date</th>
+            <th>Ime i prezime</th>
+            <th>Broj sati</th>
+            <th>Datum</th>
         </tr>
         </thead>
-        {% for record in list_records.items() %}
+        {% for k, v in list_records.items() %}
             <tr>
-                <td>{{ record }}</td>
-
+                <td>{{ k }}</td>
+                <td>{{ v }}</td>
+                <td> datum </td>
             </tr>
         {% endfor %}
     </table>
+    {% endif %}
 
+<script>
+$(document).ready(function(){
+  $("#login_button").click(function(){
+    $("#myModal").modal();
+  });
+});
+</script>
 
 {% endblock content %}
