--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -10,13 +10,15 @@
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Članovi<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="/members/add">Dodaj člana</a></li>
-                  <li><a href="#">Uredi člana</a></li>
+                  <li><a href="/members/list">Lista članova</a></li>
                 </ul>
             </li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Aktivnosti<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Dodaj aktivnost</a></li>
-                  <li><a href="#">Uredi aktivnost</a></li>
+                  <li><a href="/activities/add">Dodaj aktivnost</a></li>
+                  <li><a href="/activities/list">Pregled aktivnosti</a></li>
+                  <li class="divider"></li>
+                    <li><a href="/activities/add_type">Dodaj tip aktivnosti</a></li>
                 </ul>
             </li>
             <li><a href="#">Statistika</a></li>
