--- a/templates/members/add.html
+++ b/templates/members/add.html
@@ -14,57 +14,57 @@
   <h2>Forma za dodavanje člana</h2>
   <form class="form-horizontal" method="post">
     <div class="form-group">
-      <label class="control-label col-sm-2" for="name">Name:</label>
+      <label class="control-label col-sm-2" for="name">Ime:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="name" placeholder="Enter name" name="name" required>
+        <input type="text" class="form-control" id="name" placeholder="Upiši ime" name="name" required>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="lastname">Last name:</label>
+      <label class="control-label col-sm-2" for="lastname">Prezime:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="lastname" placeholder="Enter last name" name="lastname" required>
+        <input type="text" class="form-control" id="lastname" placeholder="Upiši prezime" name="lastname" required>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="nickname">Nickname:</label>
+      <label class="control-label col-sm-2" for="nickname">Nadimak:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="nickname" placeholder="Enter nickname" name="nickname">
+        <input type="text" class="form-control" id="nickname" placeholder="Upiši nadimak" name="nickname">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="oib">OIB:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="oib" placeholder="Enter oib" name="oib" required>
+        <input type="text" class="form-control" id="oib" placeholder="Upiši oib" name="oib" required>
       </div>
     </div>
       <div class="form-group">
-      <label class="control-label col-sm-2" for="phone">Phone number:</label>
+      <label class="control-label col-sm-2" for="phone">Broj mobitela:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="phone" placeholder="Enter phone number" name="phone" required>
+        <input type="text" class="form-control" id="phone" placeholder="Upiši broj mobitela" name="phone" required>
       </div>
     </div>
       <div class="form-group">
-      <label class="control-label col-sm-2" for="dateofbirth">Date of birth:</label>
+      <label class="control-label col-sm-2" for="dateofbirth">Datum rođenja:</label>
       <div class="col-sm-10">
-        <input type="date" class="form-control" id="dateofbirth" placeholder="Enter date of birth" name="dateofbirth" required>
+        <input type="date" class="form-control" id="dateofbirth" placeholder="Upiši datum rođenja" name="dateofbirth" required>
       </div>
     </div>
       <div class="form-group">
-      <label class="control-label col-sm-2" for="membership">Membership start date:</label>
+      <label class="control-label col-sm-2" for="membership">Datum učlanjenja:</label>
       <div class="col-sm-10">
-        <input type="date" class="form-control" id="membership" placeholder="Enter membership start date" name="membership" required>
+        <input type="date" class="form-control" id="membership" placeholder="Upiši datum učlanjenja" name="membership" required>
       </div>
     </div>
       <div class="form-group">
-      <label class="control-label col-sm-2" for="idcard">Card ID:</label>
+      <label class="control-label col-sm-2" for="idcard">Broj članske iskaznice:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="idcard" placeholder="Enter last name" name="idcard" required>
+        <input type="text" class="form-control" id="idcard" placeholder="Upiši broj članske iskaznice" name="idcard" required>
       </div>
     </div>
       <div class="form-group">
       <label class="control-label col-sm-2" for="email">Email:</label>
       <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
+        <input type="email" class="form-control" id="email" placeholder="Upiši email" name="email" required>
       </div>
     </div>
       <div class="form-group">
