--- a/templates/members/edit.html
+++ b/templates/members/edit.html
@@ -11,22 +11,22 @@
 <body>
 
 <div class="container">
-  <h2>Forma za dodavanje člana</h2>
+  <h2>Forma za izmjenu podataka o članu</h2>
   <form class="form-horizontal" method="post">
     <div class="form-group">
-      <label class="control-label col-sm-2" for="name">Name:</label>
+      <label class="control-label col-sm-2" for="name">Ime:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="name" value="{{ member[0] }}" name="name" required>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="lastname">Last name:</label>
+      <label class="control-label col-sm-2" for="lastname">Prezime:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="lastname" value="{{ member[1] }}" name="lastname" required>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-sm-2" for="nickname">Nickname:</label>
+      <label class="control-label col-sm-2" for="nickname">Nadimak:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="nickname" value="{{ member[2] }}" name="nickname">
       </div>
@@ -38,25 +38,25 @@
       </div>
     </div>
       <div class="form-group">
-      <label class="control-label col-sm-2" for="phone">Phone number:</label>
+      <label class="control-label col-sm-2" for="phone">Broj mobitela:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="phone" value="{{ member[4] }}" name="phone" required>
       </div>
     </div>
       <div class="form-group">
-      <label class="control-label col-sm-2" for="dateofbirth">Date of birth:</label>
+      <label class="control-label col-sm-2" for="dateofbirth">Datum rođenja:</label>
       <div class="col-sm-10">
         <input type="date" class="form-control" id="dateofbirth" value="{{ member[5] }}" name="dateofbirth" required>
       </div>
     </div>
       <div class="form-group">
-      <label class="control-label col-sm-2" for="membership">Membership start date:</label>
+      <label class="control-label col-sm-2" for="membership">Datum učlanjenja:</label>
       <div class="col-sm-10">
         <input type="date" class="form-control" id="membership" value="{{ member[6] }}" name="membership" required>
       </div>
     </div>
       <div class="form-group">
-      <label class="control-label col-sm-2" for="idcard">Card ID:</label>
+      <label class="control-label col-sm-2" for="idcard">Broj članske iskaznice:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="idcard" value="{{ member[7] }}" name="idcard" required>
       </div>
