Add/edit/list activity types, added base.html extend to all activity scaff views

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -19,6 +19,7 @@
                   <li><a href="/activities/list">Pregled aktivnosti</a></li>
                   <li class="divider"></li>
                     <li><a href="/activities/add_type">Dodaj tip aktivnosti</a></li>
+                    <li><a href="/activities/list_types">Pregled tipova aktivnosti</a></li>
                 </ul>
             </li>
             <li><a href="#">Statistika</a></li>
