--- a/templates/activities/add.html
+++ b/templates/activities/add.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block content %}
 <head>
-  <title>Dodaj člana</title>
+  <title>Dodaj aktivnost</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-  <h2>Forma za dodavanje člana</h2>
+  <h2>Forma za dodavanje aktivnosti</h2>
   <form class="form-horizontal" method="post">
     <div class="form-group">
       <label class="control-label col-sm-2" for="name">Naziv aktivnosti:</label>
@@ -50,4 +50,4 @@
 </div>
 
 </body>
-</html>
+{% endblock content %}
