--- a/templates/members/add.html
+++ b/templates/members/add.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block content %}
 <head>
   <title>Dodaj člana</title>
   <meta charset="utf-8">
@@ -93,4 +93,4 @@
 </div>
 
 </body>
-</html>
+{% endblock content %}
