Remove member/activity/activity type, added button for linking members to activities

--- a/templates/activities/add.html
+++ b/templates/activities/add.html
@@ -43,7 +43,8 @@
     </div>
       <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-warning">Submit</button>
+        <button type="submit" class="btn btn-success" name="action" value="add_only">Dodaj aktivnost</button>
+        <button type="submit" class="btn btn-warning" name="action" value="member_to_activity">Dodaj članove koji su došli</button>
       </div>
     </div>
   </form>
