--- a/templates/activities/edit.html
+++ b/templates/activities/edit.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <head>
-  <title>Dodaj člana</title>
+  <title>Izmjeni aktivnost</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -10,8 +10,24 @@
 </head>
 <body>
 
+<script>
+function clicked(e)
+{
+    if(!confirm('Oprez! Pritiskom na OK podaci se neće moći vratiti! Želite li nastaviti?'))e.preventDefault();
+    else {
+        $.ajax({
+            url: '/activities/remove/'+{{activity_id}},
+            type: 'POST',
+            success: function(data)
+            {
+                window.location.href="/activities/list"
+            }
+        })};
+}
+</script>
+
 <div class="container">
-  <h2>Forma za dodavanje člana</h2>
+  <h2>Forma za izmjenu aktivnosti</h2>
   <form class="form-horizontal" method="post">
     <div class="form-group">
       <label class="control-label col-sm-2" for="name">Naziv aktivnosti:</label>
@@ -49,6 +65,7 @@
       <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button type="submit" class="btn btn-warning">Submit</button>
+        <button type="button" class="btn btn-danger" onclick="clicked(event)">Izbriši aktivnost</button>
       </div>
     </div>
   </form>
