--- a/templates/activities/edit_type.html
+++ b/templates/activities/edit_type.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <head>
-  <title>Dodaj tip aktivnosti</title>
+  <title>Izmjeni tip aktivnosti</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -9,9 +9,23 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+<script>
+function clicked(e)
+{
+    if(!confirm('Oprez! Pritiskom na OK podaci se neće moći vratiti! Želite li nastaviti?'))e.preventDefault();
+    else {
+        $.ajax({
+            url: '/activities/remove_type/'+{{activity_type_id}},
+            type: 'POST',
+            success: function(data)
+            {
+                window.location.href="/activities/list_types"
+            }
+        })};
+}
+</script>
 <div class="container">
-  <h2>Forma za dodavanje tipa aktivnosti</h2>
+  <h2>Forma za izmjenu tipa aktivnosti</h2>
   <form class="form-horizontal" method="post">
     <div class="form-group">
       <label class="control-label col-sm-2" for="name">Naziv tipa aktivnosti:</label>
@@ -28,6 +42,7 @@
       <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button type="submit" class="btn btn-warning">Submit</button>
+        <button type="button" class="btn btn-danger" onclick="clicked(event)">Izbriši tip aktivnosti</button>
       </div>
     </div>
   </form>
