--- a/templates/activities/add_type.html
+++ b/templates/activities/add_type.html
@@ -27,7 +27,7 @@
     </div>
       <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-warning">Submit</button>
+        <button type="submit" class="btn btn-success">Dodaj tip aktivnosti</button>
       </div>
     </div>
   </form>
