--- a/templates/members/add.html
+++ b/templates/members/add.html
@@ -86,7 +86,7 @@
     </div>
       <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-warning">Submit</button>
+        <button type="submit" class="btn btn-success">Dodaj člana</button>
       </div>
     </div>
   </form>
