--- a/templates/members/edit.html
+++ b/templates/members/edit.html
@@ -10,6 +10,22 @@
 </head>
 <body>
 
+<script>
+function clicked(e)
+{
+    if(!confirm('Oprez! Pritiskom na OK podaci se neće moći vratiti! Želite li nastaviti?'))e.preventDefault();
+    else {
+        $.ajax({
+            url: '/members/remove/'+{{member_id}},
+            type: 'POST',
+            success: function(data)
+            {
+                window.location.href="/members/list"
+            }
+        })};
+}
+</script>
+
 <div class="container">
   <h2>Forma za izmjenu podataka o članu</h2>
   <form class="form-horizontal" method="post">
@@ -86,7 +102,8 @@
     </div>
       <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-warning">Submit</button>
+          <button type="submit" class="btn btn-warning">Submit</button>
+          <button type="button" class="btn btn-danger" onclick="clicked(event)">Izbriši člana</button>
       </div>
     </div>
   </form>
