--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                   <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
                 </div>
                 <div class="checkbox">
-                  <label><input type="checkbox" value="" checked>Remember me</label>
+                  <label><input type="checkbox" value="" disabled>Remember me (TODO)</label>
                 </div>
                   <button type="submit" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-off"></span> Submit</button>
               </form>
@@ -67,7 +67,7 @@
     </div>
 
     {% if g.user is not none %}
-    <h4>Aktivnost prošlog mjeseca</h4>
+    <h4>Aktivnost ovog mjeseca</h4>
     <hr/>
 
     <table class="table table-striped table-bordered table-hover">
