--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -5,7 +5,7 @@
         </div>
         <ul class="nav navbar-nav">
             {% if g.user is none %}
-            <li><a>Dobrodošli!</a></li>
+            <li><a>Bok! Da bi koristio aplikaciju moraš se ulogirati!</a></li>
             {% else %}
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Članovi<span class="caret"></span></a>
                 <ul class="dropdown-menu">
