--- a/templates/activities/add.html
+++ b/templates/activities/add.html
@@ -41,14 +41,47 @@
       </select>
       </div>
     </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="section">Dežurna sekcija:</label>
+          {% if session['access_level'] > 0 %}
+          <div class="col-sm-10">
+              <select class="form-control" name="section" required>
+                  <option value='{{session["section"]}}' selected disabled>{{session["section"]}}</option>
+              </select>
+          </div>
+          {% else %}
+      <div class="col-sm-10">
+        <select class="form-control" id="section" name="section" required>
+            <option value="" selected disabled hidden>Izaberi dežurnu sekciju</option>
+            <option value="svi">Sve sekcije</option>
+            <option value="bike">Bike</option>
+            <option value="disco">Disco</option>
+            <option value="dramska">Dramska</option>
+            <option value="foto">Foto</option>
+            <option value="glazbena">Glazbena</option>
+            <option value="pijandure">Pijandure</option>
+            <option value="comp">Računarska</option>
+            <option value="tech">Tehnička</option>
+            <option value="video">Video</option>
+      </select>
+      </div>
+          {% endif %}
+    </div>
       <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-success" name="action" value="add_only">Dodaj aktivnost</button>
-        <button type="submit" class="btn btn-warning" name="action" value="member_to_activity">Dodaj članove koji su došli</button>
+        <button type="submit" class="btn btn-info" name="action" value="add_only">Dodaj aktivnost i završi</button>
+        <button type="submit" class="btn btn-success" name="action" value="member_to_activity">Nastavak</button>
+        <button type="button" class="btn btn-warning" onclick="goBack()">Odustani</button>
       </div>
     </div>
   </form>
 </div>
 
 </body>
+
+<script>
+  function goBack() {
+  window.history.back();
+}
+</script>
 {% endblock content %}
