--- a/templates/activities/edit_member_hours.html
+++ b/templates/activities/edit_member_hours.html
@@ -10,22 +10,6 @@
 </head>
 <body>
 
-<script>
-function clicked(e)
-{
-    if(!confirm('Oprez! Pritiskom na OK podaci se neće moći vratiti! Želite li nastaviti?'))e.preventDefault();
-    else {
-        $.ajax({
-            url: '/activities/remove/'+{{activity_id}},
-            type: 'POST',
-            success: function(data)
-            {
-                window.location.href="/activities/list"
-            }
-        })};
-}
-</script>
-
 <div class="container">
   <h2>Izmjena sati članova koji su došli na aktivnost {{ activity_name }} dana {{ activity_date }}. godine</h2>
   <form class="form-horizontal" method="post">
@@ -45,7 +29,8 @@ function clicked(e)
       <div class="row">
       <div class="form-group">
       <div class="col-sm-10">
-        <button type="submit" class="btn btn-warning">Submit</button>
+        <button type="submit" class="btn btn-success">Submit</button>
+          <button type="button" class="btn btn-warning" onclick="goBack()">Odustani</button>
       </div>
     </div>
           </div>
@@ -54,4 +39,10 @@ function clicked(e)
 </div>
 
 </body>
+
+<script>
+    function goBack() {
+  window.history.back();
+}
+</script>
 {% endblock content %}
