--- a/templates/activities/list.html
+++ b/templates/activities/list.html
@@ -57,6 +57,20 @@ function list(activity_id)
     }
         });
 }
+
+function remove(e, activity_id)
+{
+    if(!confirm('Oprez! Pritiskom na OK podaci se neće moći vratiti! Želite li nastaviti?'))e.preventDefault();
+    else {
+        $.ajax({
+            url: '/activities/remove/'+activity_id,
+            type: 'POST',
+            success: function(data)
+            {
+                window.location.href="/activities/list"
+            }
+        })};
+}
 </script>
 <table class="table table-striped table-bordered table-hover">
         <thead>
@@ -66,6 +80,7 @@ function list(activity_id)
             <th>Datum</th>
             <th>Tip aktivnosti</th>
             <th>Opis tipa aktivnosti</th>
+            <th>Dežurna sekcija</th>
             <th>Akcija</th>
         </tr>
         </thead>
@@ -78,9 +93,14 @@ function list(activity_id)
                 {% endfor %}
 
                 <td>
+                    {% if session['access_level'] == 0 or session['section'] == v[5] %}
                     <button type="button" class="btn btn-warning" onclick="edit({{k}})">Uredi aktivnost</button>
-                    <button type="button" class="btn btn-info" onclick="add({{k}})">Dodaj članove na aktivnost</button>
+                    {% endif %}
+                    <button type="button" class="btn btn-info" onclick="add({{k}})">Dodaj članove koji su došli</button>
                     <button type="button" class="btn btn-primary" onclick="list({{k}})">Tko je bio tada?</button>
+                    {% if session['access_level'] == 0 or v[5] == session['section'] %}
+                    <button type="button" class="btn btn-danger" onclick="remove(event,{{k}})">Izbriši aktivnost</button>
+                    {% endif %}
                 </td>
             </tr>
         {% endfor %}
