--- a/templates/activities/list_activity_members.html
+++ b/templates/activities/list_activity_members.html
@@ -21,7 +21,7 @@
 {% if not members_list %}
     <h2>Za aktivnost {{ activity_name }} održanu dana {{ activity_date }}. godine nije zapisan niti jedan član</h2>
 {% else %}
-  <h2>Članovi koji su radili na aktivnosti {{ activity_name }} dana {{ activity_date }}. godine</h2>
+  <h2>Članovi koji su volontirali na aktivnosti {{ activity_name }} dana {{ activity_date }}. godine</h2>
 {% endif %}
 <table class="table table-striped table-bordered table-hover">
         <thead>
