--- a/templates/members/add.html
+++ b/templates/members/add.html
@@ -69,6 +69,13 @@
     </div>
       <div class="form-group">
       <label class="control-label col-sm-2" for="section">Sekcija:</label>
+          {% if session['access_level'] > 0 %}
+          <div class="col-sm-10">
+              <select class="form-control" name="section" required>
+                  <option value='{{session["section"]}}' selected disabled>{{session["section"]}}</option>
+              </select>
+          </div>
+          {% else %}
       <div class="col-sm-10">
         <select class="form-control" id="section" name="section" required>
             <option value="" selected disabled hidden>Izaberi sekciju</option>
@@ -83,14 +90,21 @@
             <option value="video">Video</option>
       </select>
       </div>
+          {% endif %}
     </div>
       <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <button type="submit" class="btn btn-success">Dodaj člana</button>
+        <button type="button" class="btn btn-warning" onclick="goBack()">Odustani</button>
       </div>
     </div>
   </form>
 </div>
 
 </body>
+<script>
+  function goBack() {
+  window.history.back();
+}
+</script>
 {% endblock content %}
