Monthly statistics functionality

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -22,7 +22,13 @@
                     <li><a href="/activities/list_types">Pregled tipova aktivnosti</a></li>
                 </ul>
             </li>
-            <li><a href="#">Statistika</a></li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Statistika<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="/statistics/monthly">Mjesečna statistika</a></li>
+                  <li><a href="/statistics/interval">Intervalna statistika</a></li>
+                    <li><a href="/statistics/orange">Narančaste aktivnosti</a></li>
+                </ul>
+            </li>
             {% endif %}
         </ul>
 
