--- a/templates/members/edit.html
+++ b/templates/members/edit.html
@@ -92,16 +92,7 @@ function goBack() {
       <label class="control-label col-sm-2" for="section">Sekcija:</label>
       <div class="col-sm-10">
         <select class="form-control" id="section" name="section" required>
-            <option value="{{ member[9] }}" selected disabled hidden>{{ member[9] }}</option>
-            <option value="bike">Bike</option>
-            <option value="disco">Disco</option>
-            <option value="dramska">Dramska</option>
-            <option value="foto">Foto</option>
-            <option value="glazbena">Glazbena</option>
-            <option value="pijandure">Pijandure</option>
-            <option value="comp">Računarska</option>
-            <option value="tech">Tehnička</option>
-            <option value="video">Video</option>
+            <option value="{{ member[9] }}" selected disabled>{{ member[9] }}</option>
       </select>
       </div>
     </div>
