--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="/">KSET - Volonterski sati</a>
@@ -26,9 +26,9 @@
                 <ul class="dropdown-menu">
                   <li><a href="/statistics/monthly">Mjesečna statistika</a></li>
                   <li><a href="/statistics/interval">Intervalna statistika</a></li>
-                    <li><a href="/statistics/orange">Narančaste aktivnosti</a></li>
                 </ul>
             </li>
+            <li><a href="/statistics/export">Export</a></li>
             {% endif %}
         </ul>
 
