--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <style>
-  .modal-header, h4, .close {
+  .modal-header, .close {
     background-color: #f49b13;
     color:white !important;
     text-align: center;
@@ -15,6 +15,11 @@
   }
   .modal-footer {
     background-color: #f9f9f9;
+  }
+  h4 {
+  color:black !important;
+  text-align: center;
+  font-size: 30px;
   }
   </style>
 </head>
