--- a/templates/activities/add.html
+++ b/templates/activities/add.html
@@ -22,7 +22,7 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="description">Opis aktivnosti:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="description" placeholder="Unesi opis aktivnosti" name="description" value=" ">
+        <input type="text" class="form-control" id="description" placeholder="Unesi opis aktivnosti" name="description" value="-">
       </div>
     </div>
       <div class="form-group">
