--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -28,7 +28,7 @@
                   <li><a href="/statistics/interval">Intervalna statistika</a></li>
                 </ul>
             </li>
-            <li><a href="/statistics/export">Export</a></li>
+            <li><a href="/statistics/export" id="export">Export</a></li>
             {% endif %}
         </ul>
 
