--- a/templates/activities/edit.html
+++ b/templates/activities/edit.html
@@ -46,11 +46,27 @@ function goBack() {
       </div>
     </div>
       <div class="form-group">
-      <label class="control-label col-sm-2" for="date">Datum aktiosti:</label>
+      <label class="control-label col-sm-2" for="date">Datum aktivnosti:</label>
       <div class="col-sm-10">
         <input type="date" class="form-control" id="date" value="{{ activity[2] }}" name="date" required>
       </div>
     </div>
+      {% if session['access_level'] == 0 %}
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="section">Dežurna sekcija:</label>
+      <div class="col-sm-10">
+        <select class="form-control" id="section" name="section" required>
+            {% for k,v in sections.items() %}
+                {% if k == activity[-1] %}
+                    <option value="{{ k }}" selected>{{ sections[activity[-1]] }}</option>
+                {% else %}
+                <option value="{{ k }}" >{{ v }}</option>
+                {% endif %}
+            {% endfor %}
+      </select>
+      </div>
+    </div>
+      {% endif %}
       <div class="form-group">
       <label class="control-label col-sm-2" for="type">Tip aktivnosti:</label>
       <div class="col-sm-10">
