--- a/templates/statistics/export.html
+++ b/templates/statistics/export.html
@@ -5,32 +5,26 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <style>
-  .modal-header, h4, .close {
-    background-color: #f49b13;
-    color:white !important;
-    text-align: center;
-    font-size: 30px;
-  }
-  .modal-footer {
-    background-color: #f9f9f9;
-  }
-  </style>
 </head>
 <body>
 
 <table class="table table-striped table-bordered table-hover">
         <thead>
         <tr>
-            <th>Naziv</th>
-            <th>Opis</th>
-            {% if session['access_level'] == 0 %}
+            <th>Ime</th>
+            <th>Prezime</th>
+            <th>Nadimak</th>
+            <th>OIB</th>
+            <th>Broj telefona</th>
+            <th>Datum rođenja</th>
+            <th>Datum učlanjenja</th>
+            <th>Broj iskaznice</th>
+            <th>Email</th>
             <th>Sekcija</th>
-            {% endif %}
         </tr>
         </thead>
         {% for k, v in list_records.items() %}
-            <tr class='clickable-row' data-href="{{ url_for('activities.edit_activity_type', type_id = k )}}">
+            <tr class='clickable-row' data-href="{{ url_for('statistics.export', member_id = k )}}">
                 {% for value in v %}
                     <td>
                         {{ value }}
