--- a/templates/statistics/interval.html
+++ b/templates/statistics/interval.html
@@ -7,8 +7,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h2>Statistika od {{days[0]}}.{{months[0]}}.{{years[0]}}. godine do {{days[1]}}.{{months[1]}}.{{years[1]}}. godine</h2>
-<h4>Klikom na red se otvara detaljnija statistika za tog člana</h4>
+<h2 style="text-align:center">Statistika od {{days[0]}}.{{months[0]}}.{{years[0]}}. godine do {{days[1]}}.{{months[1]}}.{{years[1]}}. godine</h2>
+<h4 style="text-align:center">Klikom na red se otvara detaljnija statistika za tog člana</h4>
 <form class="form-vertical" method="post">
 <label for="start_date">Izaberi početni datum:</label>
 <input type="date" id="start_date" name="start_date"
