--- a/templates/statistics/member_statistics.html
+++ b/templates/statistics/member_statistics.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-<h2>Statistika člana {{member[0]}} {{member[1]}} ({{member[2]}}) od {{days[0]}}.{{months[0]}}.{{years[0]}}. godine do {{days[1]}}.{{months[1]}}.{{years[1]}}. godine</h2>
+<h2 style="text-align:center">Statistika člana {{member[0]}} {{member[1]}} ({{member[2]}}) od {{days[0]}}.{{months[0]}}.{{years[0]}}. godine do {{days[1]}}.{{months[1]}}.{{years[1]}}. godine</h2>
 <form class="form-vertical" method="post">
 <label for="start_date">Izaberi početni datum:</label>
 <input type="date" id="start_date" name="start_date"
