--- a/templates/activities/add.html
+++ b/templates/activities/add.html
@@ -36,7 +36,9 @@
       <div class="col-sm-10">
         <select class="form-control" id="type" name="type" required>
             {% for k,v in activity_types.items() %}
-                <option value="{{ k }}" >{{ v }}</option>
+                {% if session['access_level'] == 0 or session['section'] == v[1] or v[1] == 'svi' %}
+                    <option value="{{ k }}" >{{ v[0] }}</option>
+                {% endif %}
             {% endfor %}
       </select>
       </div>
