--- a/templates/activities/add_members_to_activity.html
+++ b/templates/activities/add_members_to_activity.html
@@ -14,25 +14,53 @@
 function goBack() {
   window.history.back();
 }
+
+function checkboxChange(checkbox, input_id) {
+    var input = document.getElementById(input_id);
+    input.disabled = !checkbox.checked;
+    var factor = document.getElementById("factor"+input_id);
+    factor.disabled = !checkbox.checked;
+}
+
+function inputChange(default_input) {
+    {% for k,v in members_list.items() %}
+        var input_element = document.getElementById({{ k }});
+        if(default_input.value != '' && !input_element.disabled){
+            input_element.value = default_input.value;
+        }
+    {% endfor %}
+}
+
 </script>
 
 <div class="container">
   <h2>Forma za upis članova koji su došli na aktivnost</h2>
-  <form class="form-horizontal" method="post">
+    <div class="row">
+        <div class="form-group form-inline col-xs-8">
+            <label class="form-label" for="default">Standardna vrijednost sati</label>
+            <input type="number" min="0" step="0.25" class="form-control" id="default" value=0 name="hoursworked{{ k }}" onchange="inputChange(this)">
+        </div>
+    </div>
+  <form class="form-horizontal" id="form" method="post">
       {% for k,v in members_list.items() %}
       <div class="row">
-              <div class="form-group form-inline col-xs-6">
+              <div class="form-group form-inline col-xs-4">
                 <label class="form-label" for="{{ k }}">{{ v[0] }} {{ v[1] }}</label>
-                <input type="number" min="0" step="0.25" class="form-control" id="{{ k }}" value=0 name="hoursworked{{ k }}">
+                <input type="number" min="0" step="0.25" class="form-control" id="{{ k }}" value=0 name="hoursworked{{ k }}" disabled>
             </div>
 
             <div class="form-group form-inline col-xs-3">
-                <label for="factor">Faktor</label>
-                <input type="number" min="0" step="0.25" id="factor" class="form-control " value=1 name="factor{{ k }}">
+                <label for="factor{{k}}">Faktor</label>
+                <input type="number" min="0" step="0.25" id="factor{{k}}" class="form-control " value=1 name="factor{{ k }}" disabled>
       </div>
           <div class="form-group form-inline col-xs-3">
                 <label for="section">Sekcija</label>
-              <input type="text" id="section" class="form-control " value="{{ v[9] }}" name="factor{{ k }}" disabled>
+              <input type="text" id="section" class="form-control " value="{{ v[9] }}" name="section{{ k }}" disabled>
+      </div>
+
+          <div class="form-group form-inline col-xs-2">
+                <label for="checkbox">Prisutan/na</label>
+              <input type="checkbox" id="checkbox" class="form-control" name="checkbox{{ k }}" onchange="checkboxChange(this, {{k}})">
       </div>
             </div>
       {% endfor %}
