--- a/templates/activities/add_members_to_activity.html
+++ b/templates/activities/add_members_to_activity.html
@@ -38,7 +38,7 @@ function inputChange(default_input) {
     <div class="row">
         <div class="form-group form-inline col-xs-8">
             <label class="form-label" for="default">Standardna vrijednost sati</label>
-            <input type="number" min="0" step="0.25" class="form-control" id="default" value=0 name="hoursworked{{ k }}" onchange="inputChange(this)">
+            <input type="number" min="0" step="0.25" class="form-control" id="default" value=0 name="hoursworked-standard" onchange="inputChange(this)">
         </div>
     </div>
   <form class="form-horizontal" id="form" method="post">
