--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -13,6 +13,10 @@
                         <li><a href="/members/add">Dodaj člana</a></li>
                     {% endif %}
                   <li><a href="/members/list">Lista članova</a></li>
+                    {% if session['access_level'] <= 1 %}
+                        <li class="divider"></li>
+                        <li><a href="/members/associate">Pridruži člana vlastitoj sekciji</a></li>
+                    {% endif %}
                 </ul>
             </li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Aktivnosti<span class="caret"></span></a>
