--- a/templates/members/edit.html
+++ b/templates/members/edit.html
@@ -94,8 +94,8 @@ function goBack() {
       <div class="col-sm-10">
         <select class="form-control" id="section" name="section" required>
             {% for k,v in sections.items() %}
-                {% if k == member[9] %}
-                    <option value="{{ k }}" selected>{{ sections[member[9]] }}</option>
+                {% if k == member_section %}
+                    <option value="{{ k }}" selected>{{ sections[member_section] }}</option>
                 {% elif k != 'svi' %}
                 <option value="{{ k }}" >{{ v }}</option>
                 {% endif %}
@@ -108,11 +108,25 @@ function goBack() {
             <label class="control-label col-sm-2" for="section2">Sekcija:</label>
             <div class="col-sm-10">
               <select class="form-control" id="section2" name="section" required>
-                  <option value="{{ member[9] }}" selected disabled>{{ sections[member[9]] }}</option>
+                  <option value="{{ member_section }}" selected disabled>{{ sections[member_section] }}</option>
             </select>
             </div>
           </div>
       {% endif %}
+      <div class="form-group">
+            <label class="control-label col-sm-2" for="section2">Boja iskaznice:</label>
+            <div class="col-sm-10">
+              <select class="form-control" id="card" name="cardcolor" required>
+                  {% for k,v in cards.items() %}
+                    {% if k == member_card %}
+                        <option value="{{ k }}" selected>{{ v }}</option>
+                    {% else %}
+                        <option value="{{ k }}">{{ v }}</option>
+                    {% endif %}
+                  {% endfor %}
+            </select>
+            </div>
+          </div>
       <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
           <button type="submit" class="btn btn-success">Submit</button>
