VolonterskiSati 1.3 Added Teams

--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -34,6 +34,7 @@
       <div class="col-sm-10">
         <select class="form-control" id="section" name="section" required>
             <option value="" selected disabled hidden>Izaberi sekciju</option>
+            <option label="Sekcije" style="color:blue" disabled></option>
             <option value="bike">Bike</option>
             <option value="disco">Disco</option>
             <option value="dramska">Dramska</option>
@@ -43,6 +44,9 @@
             <option value="comp">Računarska</option>
             <option value="tech">Tehnička</option>
             <option value="video">Video</option>
+            <option label="Timovi" style="color:blue" disabled></option>
+            <option value="pr">PR</option>
+            <option value="dizajn">Dizajn</option>
       </select>
       </div>
     </div>
